# OpenCLv1.2-Wrapper

./: CMakeLists.txt  README.md  struct.h  template.cpp  toInclude.h
programs/: program_test.cl
utils/: envRela.cpp  envRela.h  mm.cpp  mm.h  pgAndKernel.cpp  pgAndKernel.h
